change page name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-adventure",
+  "name": "govhack-adventure",
   "version": "0.1.0",
-  "homepage": "https://github.com/haakandev/govhack-adventure",
+  "homepage": "https://haakandev.github.io/govhack-adventure",
   "private": true,
   "dependencies": {
     "gh-pages": "^2.1.1",
